# BuildsVilds_Backend

./: .env  .gitignore  README.md  pyproject.toml
src/: dev.py  main.py  test_email.py  test_mongo.py
src/app/: app.py
src/app/api/: auth_routes.py  routes.py
src/app/connectors/: database.py  redis_client.py
src/app/controllers/: auth_controller.py  schemas.py
src/app/core/: config.py  database.py
src/app/models/: otp.py  refresh_token.py  user.py
src/app/services/: email_service.py  jwt_service.py  password_service.py
src/app/utils/: auth_middleware.py  dependencies.py
