[project]
name = "app"
version = "0.1.0"
description = "This application is designed to automate the creation and uploading of youtube videos to my channel and monetize my channel"
authors = [
    {name = "Shubs2002",email = "s.d.nakashe2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.dev:main"
prod = "src.main:main"